trunk/Archive2/f1/5e13a1dd4901f2/output
main.cpp: In instantiation of 'void f(T) [with T = int]':
main.cpp:8:5:   required from here
main.cpp:4:4: error: 'g' was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation [-fpermissive]
 g(i);
    ^
main.cpp:6:6: note: 'void g(int)' declared here, later in the translation unit
 void g(int)
      ^
