trunk/Archive2/f1/5e13a1dd4901f2/main.cpp
template <typename T>
void f(T i)
{
g(i);
}
void g(int)
{
f(42);
}
int main(int argc, char* argv[])
{
return 0;
}